--- a/assets/style.css
+++ b/assets/style.css
@@ -145,6 +145,10 @@ button.btn.active {
     .first-screen-cards {
         padding: 20px;
     }
+
+    .navmenu-hamburger {
+        display: flex !important;
+    }    
 }
 
 .references .swiper-slide img {
@@ -278,4 +282,79 @@ form textarea{
 a {
     color: white;
     text-decoration:none;
+}
+
+.navmenu-hamburger {
+    width: 30px;
+    height: 20px;
+    cursor: pointer;
+    flex-direction: column;
+    justify-content: space-between;
+    display:none;
+  }
+  
+  .navmenu-hamburger div {
+    width: 100%;
+    height: 4px;
+    background-color: #000;
+  }
+  
+  /* İlk ve üçüncü çizgiler arasında boşluk bırakmak için */
+  .navmenu-hamburger div:nth-child(2) {
+    margin-top: 8px;
+    margin-bottom: 8px;
+  }
+
+  .navmenu-hamburger div {
+    background: white;
+}
+
+.navmenu-hamburger.active div:nth-child(3) {
+    display: none;
+}
+
+.navmenu-hamburger.active div:nth-child(2) {
+    position: absolute !important;
+    top: 0;
+    left: 0;
+    margin: 0;
+    transform: rotate(135deg);
+}
+
+.navmenu-hamburger.active {
+    position: relative;
+}
+
+.navmenu-hamburger.active div:nth-child(1) {
+    position: absolute !important;
+    top: 0;
+    left: 0;
+    transform: rotate(45deg);
+    margin: 0;
+}
+
+.navmenu-hamburger div {
+    transition: all 0.2s;
+}
+
+nav.active {
+    position: fixed;
+    display: block !important;
+    top: 80px;
+    left: 0;
+    z-index: 2;
+    width: 100%;
+    background: #00000085;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+}
+
+nav.active .btn {
+    width: 100%;
+    display: block;
+    margin: 0;
+}
+
+nav {
+    transition: all 0.2s;
 }
